Добавляет форму подписки на рассылку и всех её элементов в футере

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -249,7 +249,25 @@
                             </a>
                         </li>
                     </ul>
-                </div>  
+                </div>
+                <div class="send-message">
+                    <h3 class="subtitle">подпишитесь на рассылку</h3>
+                    <form class="form">
+                        <label class="form-label">
+                            <input class="form-input" type="email" name="email" placeholder="E-mail" />
+                        </label>
+                        <button class="button send-button" type="submit">
+                            <div>
+                                <span>Подписаться</span>
+                            </div>
+                            <div class="send-icon-box">
+                                <svg class="send-icon" width="24" height="24">
+                                    <use href="../images/icons.svg#icon-icon-send"></use>
+                                </svg>
+                            </div>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer> 
