--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="hero-container">
                     <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-                    <button data-modal-open class="hero-button button" type="button">Заказать услугу</button>
+                    <button data-modal-open class="button" type="button">Заказать услугу</button>
                     <div class="backdrop is-hidden" data-modal>
                         <div class="modal">
                             <p></p>
@@ -399,7 +399,25 @@
                             </a>
                         </li>
                     </ul>
-                </div>  
+                </div>
+                <div class="send-message">
+                    <h3 class="subtitle">подпишитесь на рассылку</h3>
+                    <form class="form">
+                        <label class="form-label">
+                            <input class="form-input" type="email" name="email" placeholder="E-mail"/>
+                        </label>              
+                        <button class="button send-button" type="submit">
+                            <div>
+                                <span>Подписаться</span> 
+                            </div>
+                            <div class="send-icon-box">
+                                <svg class="send-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-icon-send"></use>
+                                </svg>
+                            </div> 
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
