--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                                 </div>
 
                                 <div class="form-contract">
-                                    <svg class="form-icon" width="18" height="18">
-                                        <use href="./images/icons.svg#icon-check-mark"></use>
+                                    <svg class="form-icon" width="16" height="15">
+                                        <use href="./images/icons.svg#icon-check"></use>
                                     </svg>
                                     <p class="text">Соглашаюсь с рассылкой и принимаю <a class="form-link" href="">Условия договора</a></p>
                                 </div>
